--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,6 +29,6 @@ $sm-font-size: 13px;
 
 // The :export directive is the magic sauce for webpack
 // https://mattferderer.com/use-sass-variables-in-typescript-and-javascript
-// :export {
-//   mainFont: $default-font-color;
-// }
+:export {
+  mainFont: $default-font-color;
+}
