--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,8 +13,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
-  // background-image: radial-gradient(circle closest-side, #3A749B 0%, #2C4461 100%);
-  background-image: radial-gradient(circle closest-side, #51adcf 0%, #0278ae 100%);
+  background-image: radial-gradient(circle closest-side, #3A749B 0%, #2C4461 100%);
+  // background-image: radial-gradient(circle closest-side, #51adcf 0%, #0278ae 100%);
   background-color: transparent;
   background-attachment: fixed;
   background-repeat: no-repeat;
